# github-scrapper

./: .gitignore  Cargo.toml
.github/workflows/: commit-check.yml  integration-check.yml  manual-sheet-scrape.yml  weekly-scrape.yml
src/: elk.rs  github.rs  helper.rs  lib.rs  main.rs  mapping.json  sheets.rs  types.rs
