[package]
name = "github-scrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
url = "2.4"
google-sheets4 = "3.1.0+20230118"
yup-oauth2 = "6.7.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
hyper = "0.14"
hyper-rustls = "0.23"
chrono = "0.4.41"
